Добавил Ant Design 5.1.0. Добавил роут, контроллер, заготовку для страницы (подпапка user папки views) профиль пользователя. Ссылка в header теперь рабочая

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "react-dom": "^18.2.0",
         "sass": "^1.56.1",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "antd": "^5.1.0"
     }
 }
