--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "antd": "^5.1.0"
+        "@ant-design/icons": "^4.8.0",
+        "@react-google-maps/api": "^2.17.1",
+        "antd": "^5.1.0",
+        "react-cool-onclickoutside": "^1.7.0",
+        "use-places-autocomplete": "^4.0.0"
     }
 }
