--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
         "@react-google-maps/api": "^2.17.1",
         "antd": "^5.1.1",
         "react-cool-onclickoutside": "^1.7.0",
-        "redux": "^4.2.0",
-        "use-places-autocomplete": "^4.0.0",
-        "video-react": "^0.16.0"
+        "use-places-autocomplete": "^4.0.0"
     }
 }
