--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@ant-design/colors": "^7.0.0",
         "@ant-design/icons": "^4.8.0",
         "@react-google-maps/api": "^2.17.1",
         "antd": "^5.1.4",
