--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "postcss": "^8.4.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.6.2",
         "sass": "^1.56.1",
         "tailwindcss": "^3.2.4",
         "vite": "^3.0.0"
