--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
+        "img": "^3.0.3",
         "laravel-vite-plugin": "^0.7.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.21",
@@ -17,6 +18,7 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.6.2",
         "sass": "^1.56.1",
+        "storage": "^0.2.0",
         "tailwindcss": "^3.2.4",
         "vite": "^3.0.0"
     },
@@ -27,6 +29,7 @@
         "antd": "^5.1.4",
         "dayjs": "^1.11.7",
         "react-cool-onclickoutside": "^1.7.0",
+        "react-image": "^4.0.3",
         "use-places-autocomplete": "^4.0.0"
     }
 }
