--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
         "@ant-design/colors": "^7.0.0",
         "@ant-design/icons": "^4.8.0",
         "@react-google-maps/api": "^2.17.1",
+        "@reduxjs/toolkit": "^1.9.1",
         "antd": "^5.1.4",
         "dayjs": "^1.11.7",
         "react-cool-onclickoutside": "^1.7.0",
         "react-image": "^4.0.3",
+        "react-redux": "^8.0.5",
+        "redux-logger": "^3.0.6",
         "use-places-autocomplete": "^4.0.0"
     }
 }
