--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "postcss": "^8.4.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.6.2",
+        "react-router-dom": "^6.7.0",
         "sass": "^1.56.1",
         "storage": "^0.2.0",
         "tailwindcss": "^3.2.4",
@@ -29,10 +29,13 @@
         "@reduxjs/toolkit": "^1.9.1",
         "antd": "^5.1.4",
         "dayjs": "^1.11.7",
+        "localforage": "^1.10.0",
+        "match-sorter": "^6.3.1",
         "react-cool-onclickoutside": "^1.7.0",
         "react-image": "^4.0.3",
         "react-redux": "^8.0.5",
         "redux-logger": "^3.0.6",
+        "sort-by": "^1.2.0",
         "use-places-autocomplete": "^4.0.0"
     }
 }
