--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
         "img": "^3.0.3",
+        "jquery": "^3.6.3",
         "laravel-vite-plugin": "^0.7.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.21",
