--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
         "@ant-design/colors": "^7.0.0",
         "@ant-design/icons": "^4.8.0",
         "@react-google-maps/api": "^2.17.1",
+        "@react-pdf/renderer": "^3.0.3",
         "@reduxjs/toolkit": "^1.9.1",
         "antd": "^5.1.4",
         "dayjs": "^1.11.7",
+        "events": "^3.3.0",
         "react-cool-onclickoutside": "^1.7.0",
         "react-image": "^4.0.3",
         "react-redux": "^8.0.5",
