Настроил вывод сообщений о необходимости выбора улицы и номера дома.

--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
         "@reduxjs/toolkit": "^1.9.1",
         "antd": "^5.1.4",
         "dayjs": "^1.11.7",
+        "events": "^3.3.0",
         "localforage": "^1.10.0",
         "match-sorter": "^6.3.1",
-        "events": "^3.3.0",
+        "rc-texty": "^0.2.0",
         "react-cool-onclickoutside": "^1.7.0",
         "react-image": "^4.0.3",
         "react-redux": "^8.0.5",
