--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "match-sorter": "^6.3.1",
         "rc-texty": "^0.2.0",
         "react-cool-onclickoutside": "^1.7.0",
+        "react-highlight-words": "^0.20.0",
         "react-image": "^4.0.3",
         "react-redux": "^8.0.5",
         "redux-logger": "^3.0.6",
