--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 /node_modules
-/public/build
 /public/hot
 /public/storage
 /storage/*.key
 /vendor
-.env
+.env.dev
 .env.backup
 .env.production
 .phpunit.result.cache
