--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@ant-design/colors": "^7.0.0",
         "@ant-design/icons": "^4.8.0",
+        "@ant-design/plots": "^1.2.4",
         "@react-google-maps/api": "^2.17.1",
         "@react-pdf/renderer": "^3.1.2",
         "@reduxjs/toolkit": "^1.9.1",
